# wikipedia-evaluator

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
app/: evaluator.py  main.py  schemas.py
frontend/: gradio_app.py
tests/: test_api.py  test_model_response_time.py  test_openai.py
